--- a/app/assets/stylesheets/layouts/_user.scss
+++ b/app/assets/stylesheets/layouts/_user.scss
@@ -2,4 +2,5 @@
   padding: 0;
   margin: 0;
   padding-top: $navbar-height;
+  min-height: calc(100vh - #{$footer-height});
 }
